feat: update json decoder
